--- a/package.json
+++ b/package.json
@@ -25,11 +25,11 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.503.0",
     "motion": "^12.9.2",
-    "next": "15.3.1",
+    "next": "^15.3.1",
     "next-sanity": "^9.10.2",
     "next-themes": "^0.4.6",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "rxjs": "^7.8.2",
     "sanity": "^3.86.1",
     "styled-components": "^6.1.17",
