--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.9.4",
     "lucide-react": "^0.503.0",
     "motion": "^12.9.2",
     "next": "^15.3.1",
@@ -31,6 +32,7 @@
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-intersection-observer": "^9.16.0",
     "react-is": "^19.1.0",
     "rxjs": "^7.8.2",
     "sanity": "^3.86.1",
