--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.1",
+    "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "react-is": "^19.1.0",
     "resend": "^4.5.0",
